<resources>
    <string name="app_name">Ayah Widget</string>
    <string name="appwidget_ayah_content">وَكَانَ بِٱلْمُؤْمِنِينَ رَحِيمًۭا\nالأحزاب 43</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Displays a periodically refreshed Quran Ayah as a home screen widget</string>
    <string name="widget_settings">Customization</string>
    <string name="widget_settings_screen">Widget Customization Screen</string>
    <string name="appearance">Appearance</string>
    <string name="text_size_label">Customize how the Ayah appears on your home screen</string>
    <string name="text_size">Text size</string>
    <string name="background_opacity">Background opacity</string>
    <string name="transparent">Transparent</string>
    <string name="opaque">Opaque</string>
    <string name="update_settings">Ayah Update</string>
    <string name="refresh_interval_label">Customize how often the displayed Ayah changes</string>
    <string name="refresh_interval">Refresh interval (mins)</string>
    <string name="change_ayah">Change Ayah Now</string>
    <string name="save">Save</string>
    <string name="adjust_text_size">Adjust text size</string>
    <string name="full_ayah_list">Full Ayah List</string>
    <string name="view_all_ayahs">View All Ayahs</string>
</resources>